buildscript {
    repositories {
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath 'com.google.cloud.tools:appengine-gradle-plugin:+'
    }
}

apply plugin: 'java'
apply plugin: 'war'
apply plugin: 'com.google.cloud.tools.appengine'

dependencies {
  compile 'com.google.appengine:appengine-api-1.0-sdk:+'  // Latest App Engine Api's
  providedCompile 'javax.servlet:javax.servlet-api:3.1.0'

  compile 'jstl:jstl:1.2'

  // Specific Retrostore AppEngine dependencies..
  compile project(":client-common")
  compile "com.google.guava:guava:20.0"
  compile group: "com.googlecode.objectify", name: "objectify", version: "5.1.22"
  compile "com.google.code.gson:gson:2.8.0"
  compile "commons-fileupload:commons-fileupload:1.3.3"
  compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.3'
  compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.5.3'

  testCompile 'junit:junit:4.12'
  testCompile 'com.google.truth:truth:0.33'
  testCompile 'org.mockito:mockito-all:1.10.19'

  testCompile 'com.google.appengine:appengine-testing:+'
  testCompile 'com.google.appengine:appengine-api-stubs:+'
  testCompile 'com.google.appengine:appengine-tools-sdk:+'
}

appengine {
  run {
    port = 8888
    jvmFlags = ['-Ddatastore.backing_store=$rootDir/local_db.bin',
                '-Dretrostore.debug.polymer=http://127.0.0.1:8081']
  }
  deploy {
    stopPreviousVersion = false
    promote = false
  }
}

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8
